--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		
 		<dependency>
 			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
+			<artifactId>json</artifactId
 			<version>20160212</version>
 		</dependency>
 		
